# nv_driveworks_demo

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  README.md  arch-orin.drawio  gw.sh  gw_ros.sh
example/dwcgf/helloworld/: CMakeLists.txt  README.md  package.xml
example/dwcgf/helloworld/data/: rig.json
example/dwcgf/helloworld/graphs/app/: DWCGFHelloworld.app.json  DWCGFHelloworldSensorLayout.sensors.json  DWCGFHelloworld_wcet.yaml
example/dwcgf/helloworld/graphs/graphlets/: DWCGFHelloworld.graphlet.json
example/dwcgf/helloworld/graphs/nodes/helloworld/: HelloWorldNode.node.json
example/dwcgf/helloworld/graphs/nodes/sum/: SumNode.node.json
example/dwcgf/helloworld/schedule/: DWCGFHelloworld__standardSchedule.stm  DWCGFHelloworld__standardSchedule.yaml
example/dwcgf/helloworld/src/nodes/sum/: SumNodeImpl.cpp
example/dwcgf/helloworld/tools/: dwchannel2ros.cpp
modules/common/cgf_app/: CMakeLists.txt  README.md
modules/common/cgf_app/graphs/: rename.sh
modules/common/cgf_app/graphs/appHelloworld/: DWCGFHelloworld.app.json  DWCGFHelloworld.graphlet.json  DWCGFHelloworld_wcet.yaml
modules/common/cgf_app/graphs/appRawCameraDeployPipe/: DWCGFRawCameraDeployPipe_wcet.yaml
modules/common/cgf_app/graphs/appRawCameraTestPipe/: DWCGFRawCameraTestPipe.graphlet.json  DWCGFRawCameraTestPipe_wcet.yaml
modules/common/cgf_app/graphs/appVirtualCameraDeployPipe/: DWCGFVirtualCameraDeployPipe.app.json  DWCGFVirtualCameraDeployPipe_wcet.yaml
modules/common/cgf_app/graphs/appVirtualCameraTestPipe/: DWCGFVirtualCameraTestPipe.graphlet.json
modules/common/cgf_app/graphs/appYUVCameraDeployPipe/: DWCGFYUVCameraDeployPipe.app.json  DWCGFYUVCameraDeployPipe.graphlet.json  DWCGFYUVCameraDeployPipe_wcet.yaml
modules/common/cgf_app/graphs/appYUVCameraTestPipe/: DWCGFYUVCameraTestPipe.app.json  DWCGFYUVCameraTestPipe.graphlet.json  DWCGFYUVCameraTestPipe_wcet.yaml
modules/common/cgf_app/graphs/graphlets/camera/: CameraCapture.graphlet.json
modules/common/cgf_app/graphs/graphlets/datasync/: ApaDataSync.graphlet.json  PilotDataSync.graphlet.json
modules/common/cgf_app/graphs/graphlets/pipe/: ApaInfer.graphlet.json  PilotInfer.graphlet.json
modules/common/cgf_app/graphs/graphlets/preproc/: ApaPreproc.graphlet.json  PilotPreproc.graphlet.json
modules/common/cgf_app/graphs/graphlets/render/: Render.graphlet.json
modules/common/cgf_app/graphs/nodes/camera/: CameraNode.node.json
modules/common/cgf_app/graphs/nodes/datasync/: DataSyncNode.node.json
modules/common/cgf_app/graphs/nodes/helloworld/: HelloWorldNode.node.json  SumNode.node.json
modules/common/cgf_app/graphs/nodes/preproc/: AlignNode.node.json  ResizeNode.node.json  StitchNode.node.json  TransformNode.node.json  UndistortNode.node.json
modules/common/cgf_app/graphs/nodes/render/: RenderNode.node.json
modules/common/cgf_app/schedule/: DWCGFHelloworld__standardSchedule.yaml  DWCGFRawCameraDeployPipe__standardSchedule.stm  DWCGFRawCameraDeployPipe__standardSchedule.yaml  DWCGFRawCameraTestPipe__standardSchedule.stm  DWCGFVirtualCameraDeployPipe__standardSchedule.stm  DWCGFVirtualCameraDeployPipe__standardSchedule.yaml  DWCGFVirtualCameraTestPipe__standardSchedule.stm  DWCGFVirtualCameraTestPipe__standardSchedule.yaml  DWCGFYUVCameraDeployPipe__standardSchedule.stm  DWCGFYUVCameraTestPipe__standardSchedule.stm  DWCGFYUVCameraTestPipe__standardSchedule.yaml
modules/common/cgf_channel/: CMakeLists.txt  README.md
modules/common/cgf_channel/src/channel/: AvEnums.hpp  CustomRawBuffer.cpp  CustomRawBuffer.hpp  Image.hpp
modules/common/cgf_channel/src/channel/common/: TypesExt.hpp
modules/common/cgf_channel/src/channel/geometry_msgs/: Point.hpp
modules/common/cgf_channel/src/channel/guardian_msgs/: GuardianInstruct.hpp
modules/common/cgf_channel/src/channel/perception_interfaces/: FreeSpaceBoundary.cpp  FreeSpaceBoundary.hpp
modules/common/cgf_channel/src/channel/sample_msgs/: CustomRawBuffer.hpp  IntWithTimestamp.hpp
modules/common/cgf_channel/src/channel/sensor_msgs/: Image.hpp
modules/common/cgf_channel/src/channel/std_msgs/: Float.hpp  Int.hpp  String.hpp
modules/common/cgf_channel/tools/: channels.hpp  dwchannel_test.cpp  type_callbacks.hpp
modules/team_demo/module_demo/: CMakeLists.txt
modules/team_demo/module_demo/include/module_demo/: module_demo.h
modules/team_demo/module_demo/src/demo_module/: demo.cpp
modules/team_demo/module_demo/test/demo_module/: demo_test.cpp
modules/team_demo/module_demo/tool/: main.cpp
modules/team_demo/team_node/: CMakeLists.txt  package.xml
modules/team_demo/team_node/src/nodes/helloworld/: HelloWorldNode.hpp  HelloWorldNodeImpl.cpp  HelloWorldNodeImpl.hpp
modules/team_demo/team_node/src/nodes/sum/: SumNode.cpp  SumNode.hpp  SumNodeImpl.cpp  SumNodeImpl.hpp
modules/xplatform/xcgf/image_pipe/: CMakeLists.txt  README.md
modules/xplatform/xcgf/image_pipe/data/: rig.json
modules/xplatform/xcgf/image_pipe/graphs/: rename.sh
modules/xplatform/xcgf/image_pipe/graphs/app/: DWCGFImagePipe.app.json  DWCGFImagePipe_wcet.yaml
modules/xplatform/xcgf/image_pipe/schedule/: DWCGFImagePipe1__standardSchedule.stm  DWCGFImagePipe1__standardSchedule.yaml  DWCGFImagePipe2__standardSchedule.stm  DWCGFImagePipe2__standardSchedule.yaml  DWCGFImagePipe3__standardSchedule.stm  DWCGFImagePipe3__standardSchedule.yaml  DWCGFImagePipe4__standardSchedule.stm  DWCGFImagePipe4__standardSchedule.yaml  DWCGFImagePipe5__standardSchedule.stm  DWCGFImagePipe5__standardSchedule.yaml  DWCGFImagePipe__standardSchedule.stm  DWCGFImagePipe__standardSchedule.yaml  DWCGFRawCameraDeployPipe__standardSchedule.stm  DWCGFRawCameraDeployPipe__standardSchedule.yaml  DWCGFRawCameraTestPipe__standardSchedule.yaml  DWCGFVirtualCameraDeployPipe__standardSchedule.stm  DWCGFVirtualCameraDeployPipe__standardSchedule.yaml  DWCGFYUVCameraDeployPipe__standardSchedule.yaml
modules/xplatform/xplatform_node/: CMakeLists.txt
modules/xplatform/xplatform_ssm/: CMakeLists.txt  README.md
modules/xplatform/xplatform_ssm/src/demo1/: SSMClass.cpp  SSMClass.hpp  demo1.cpp
scripts/: .bashrc  (+7 more)
(+165 files in other folders)
