<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>team_node</name>
    <version>0.0.1</version>
    <description>
        team_node
    </description>
    <maintainer email="mabel@openrobotics.org">Mabel Zhang</maintainer>
    <license>Apache License 2.0</license>
    <author email="dthomas@osrfoundation.org">Dirk Thomas</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>std_msgs</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>